      - the neighbour_list_from_cif() subroutine.
    - COD::CIF::Data::AtomList:
      - updated the atom property extraction logic to determine atom
        oxidation states from atom chemical types and atom names;
      - the 'exclude_hydrogens' option to the atom_array_from_cif()
        subroutine that excludes hydrogen atoms;
      - the get_atom_chemical_type() subroutine.
    - cif_select:
        the '--one-data-item-per-row' and '--one-data-item-per-column'
        options.
    - cif_sort_atoms:
      - the '--ascending-numerical', '--descending-numerical',
        '--ascending-lexical', '--descending-lexical' options.
  * Changed:
    - COD::CIF::DDL::DDLm::Validate:
      - the format of validation messages describing key uniqueness
        violations.
    - COD::CIF::Data::AtomList:
      - updated the datablock_from_atom_array() subroutine to add
        the '_atom_site_Cartn_*' CIF data items if orthogonal coordinates
        are present instead of the fractional ones.
    - cif_validate:
      - the format of validation messages describing key uniqueness
        violations.
    - codcif:
      - stopped storing stray CIF values in memory.
  * Deprecated:
    - COD::AtomNeighbours:
      - the neighbour_list_from_chemistry_mol() subroutine.
  * Fixed:
    - codcif:
      - updated the parsing logic to preserve empty save frames;
      - fixed a memory leak in cif_lex_buffer.c.
    - cif_compare_dics:
      - started using the UserMessage::sprint_message() subroutine
        to output dictionary comparison results in order to correctly
        escape symbols forbidden by the error message syntax.
    - cif_filter:
      - fixed a problem with global data block distribution.
    - cif_fix_values:
      - fixed incorrect sigma extraction routine which caused incorrect
        conversion of numbers with exponents or floating point sigma
        values.
    - cif_sort_atoms:
      - switched to relying only on the '_atom_site_type_symbol' values