@@ -11,6 +11,9 @@ cod-tools (unreleased)
       - the 'exclude_hydrogens' option to the atom_array_from_cif()
         subroutine that excludes hydrogen atoms;
       - the get_atom_chemical_type() subroutine.
+    - COD::CIF::Tags::Merge:
+      - the 'tags' option to the merge_datablocks() subroutine to provide
+        a list of data names to merge.
     - cif_select:
         the '--one-data-item-per-row' and '--one-data-item-per-column'
         options.
